// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Group Group Type 1`] = `
<div
  class="fd-popover fd-popover--right"
>
  
    
  <div
    class="fd-popover__control"
  >
    
        
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Has popup type dialog Conjoined avatars, 6 avatars displayed, 8 avatars hidden, activate for complete list"
      class="fd-avatar-group fd-avatar-group--group fd-avatar-group--m"
      onclick="onPopoverClick('popover_avatar-group_tztuj');"
      role="button"
      tabindex="0"
    >
      
            
      <div
        class="fd-avatar-group__item"
      >
        
                
        <span
          aria-label="Wendy Wallace"
          class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
        >
          WW
        </span>
        
            
      </div>
      
            
      <div
        class="fd-avatar-group__item"
      >
        
                
        <span
          aria-label="Avatar"
          class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
        >
          
                    
          <i
            class="fd-avatar__icon sap-icon--money-bills"
            role="presentation"
          />
          
                
        </span>
        
            
      </div>
      
            
      <div
        class="fd-avatar-group__item"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
            
      </div>
      
            
      <div
        class="fd-avatar-group__item"
      >
        
                
        <span
          aria-label="Endy Wallace"
          class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
        >
          EW
        </span>
        
            
      </div>
      
            
      <div
        class="fd-avatar-group__item"
      >
        
                
        <span
          aria-label="Avatar"
          class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
        >
          
                    
          <i
            class="fd-avatar__icon sap-icon--washing-machine"
            role="presentation"
          />
          
                
        </span>
        
            
      </div>
      
            
      <div
        class="fd-avatar-group__item"
      >
        
                
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('/assets/images/avatars/2.svg')"
        />
        
            
      </div>
      
        
            
      <button
        class="fd-button fd-avatar-group__more-button fd-avatar-group__more-button--m"
        role="button"
        tabindex="-1"
      >
        
                
        <span
          class="fd-button__text"
        >
          <bdi>
            +8
          </bdi>
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    aria-hidden="false"
    class="fd-popover__body fd-popover__body--right"
    id="popover_avatar-group_tztuj"
  >
    
        
    <div
      class="fd-popover__wrapper"
      style="max-height: 200px; overflow-x: hidden"
    >
      
            
      <div
        class="fd-popover__body-header"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              Team Members (14)
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
        
        
            
      <div
        class="fd-container"
      >
        
                
        <div
          class="fd-row"
        >
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Wendy Wallace"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                WW
              </span>
              
                        
            </div>
                                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                
                                
                <i
                  class="fd-avatar__icon sap-icon--money-bills"
                  role="presentation"
                />
                
                            
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="John Doe"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('/assets/images/avatars/1.svg')"
              />
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Endy Wallace"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                EW
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                
                                
                <i
                  class="fd-avatar__icon sap-icon--washing-machine"
                  role="presentation"
                />
                
                            
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="John Doe"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('/assets/images/avatars/2.svg')"
              />
              
                        
            </div>
                
                    
          </div>
          
                    
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Andy Wallace"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                AW
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                
                                
                <i
                  class="fd-avatar__icon sap-icon--account"
                  role="presentation"
                />
                
                            
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="John Doe"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('/assets/images/avatars/3.svg')"
              />
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="John Moe"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                JM
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Joe Bloggs"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                JB
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Avatar"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                
                                
                <i
                  class="fd-avatar__icon sap-icon--visits"
                  role="presentation"
                />
                
                            
              </span>
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="John Doe"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('/assets/images/avatars/4.svg')"
              />
              
                        
            </div>
                
                    
          </div>
          
                    
          <div
            class="fd-col fd-col--3"
          >
            
                        
            <div
              class="fd-avatar-group__item"
            >
              
                            
              <span
                aria-label="Fred Bloggs"
                class="fd-avatar fd-avatar--m fd-avatar--circle fd-avatar--border"
              >
                FB
              </span>
              
                        
            </div>
                
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Avatar Group Individual Type 1`] = `
<div
  class="fd-avatar-group fd-avatar-group--individual fd-avatar-group--s"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-avatar-group__item"
        onclick="onPopoverClick('popover_avatar_5z28edb');"
        tabindex="0"
      >
        
                
        <span
          aria-label="Wendy Wallace"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
        >
          WW
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body"
      id="popover_avatar_5z28edb"
    >
      
            
      <div
        class="fd-quick-view"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              Business Card
            </div>
            
                    
          </div>
          
                
        </div>
        
        
                
        <div
          class="fd-quick-view__content"
        >
          
                    
          <div
            class="fd-bar fd-bar--header-with-subheader"
          >
            
                        
            <div
              class="fd-bar__left"
            >
              
                            
              <span
                aria-label="Wendy Wallace"
                class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
              >
                WW
              </span>
              
                            
              <div
                class="fd-quick-view__subheader-text"
              >
                
                                
                <h5
                  class="fd-title fd-title--h5"
                >
                  Wendy Wallace
                </h5>
                
                                
                <div
                  class="fd-quick-view__subtitle"
                >
                  Marketing Manager
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-form-group"
            role="group"
          >
            
                        
            <div
              aria-labelledby="contactDetails_5z28edb"
              class="fd-form-group__header"
            >
              
                            
              <h1
                class="fd-form-group__header-text"
                id="contactDetails_5z28edb"
              >
                Contact Details
              </h1>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Mobile
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+89181818181"
              >
                +89181818181
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Phone
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+2828282828"
              >
                +2828282828
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Email
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="mailto:blabla@blabla"
              >
                blabla@blabla
              </a>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-avatar-group__item"
        onclick="onPopoverClick('popover_avatar_spbw4q');"
        tabindex="0"
      >
        
               
        <span
          aria-label="Avatar"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
        >
          
                    
          <i
            class="fd-avatar__icon sap-icon--money-bills"
            role="presentation"
          />
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body"
      id="popover_avatar_spbw4q"
    >
      
            
      <div
        class="fd-quick-view"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              Business Card
            </div>
            
                    
          </div>
          
                
        </div>
        
            
                
        <div
          class="fd-quick-view__content"
        >
          
                    
          <div
            class="fd-bar fd-bar--header-with-subheader"
          >
            
                        
            <div
              class="fd-bar__left"
            >
              
                            
              <span
                aria-label="Wendy Wallace"
                class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
              >
                WW
              </span>
              
                            
              <div
                class="fd-quick-view__subheader-text"
              >
                
                                
                <h5
                  class="fd-title fd-title--h5"
                >
                  Sarah Parker
                </h5>
                
                                
                <div
                  class="fd-quick-view__subtitle"
                >
                  Visual Designer
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-form-group"
            role="group"
          >
            
                        
            <div
              aria-labelledby="contactDetails_spbw4q"
              class="fd-form-group__header"
            >
              
                            
              <h1
                class="fd-form-group__header-text"
                id="contactDetails_spbw4q"
              >
                Contact Details
              </h1>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Mobile
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+89181818181"
              >
                +89181818181
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Phone
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+2828282828"
              >
                +2828282828
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Email
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="mailto:blabla@blabla"
              >
                blabla@blabla
              </a>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-avatar-group__item"
        onclick="onPopoverClick('popover_avatar_4ahzcg');"
        tabindex="0"
      >
        
               
        <span
          aria-label="Christian Bow"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
          role="presentation"
          style="background-image: url('/assets/images/avatars/1.svg')"
        />
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body"
      id="popover_avatar_4ahzcg"
    >
      
            
      <div
        class="fd-quick-view"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              Business Card
            </div>
            
                    
          </div>
          
                
        </div>
        
            
                
        <div
          class="fd-quick-view__content"
        >
          
                    
          <div
            class="fd-bar fd-bar--header-with-subheader"
          >
            
                        
            <div
              class="fd-bar__left"
            >
              
                            
              <span
                aria-label="Christian Bow"
                class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
                role="presentation"
                style="background-image: url('/assets/images/avatars/1.svg')"
              />
              
                            
              <div
                class="fd-quick-view__subheader-text"
              >
                
                                
                <h5
                  class="fd-title fd-title--h5"
                >
                  Christian Bow
                </h5>
                
                                
                <div
                  class="fd-quick-view__subtitle"
                >
                  Marketing Manager
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-form-group"
            role="group"
          >
            
                        
            <div
              aria-labelledby="contactDetails_4ahzcg"
              class="fd-form-group__header"
            >
              
                            
              <h1
                class="fd-form-group__header-text"
                id="contactDetails_4ahzcg"
              >
                Contact Details
              </h1>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Mobile
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+89181818181"
              >
                +89181818181
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Phone
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+2828282828"
              >
                +2828282828
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Email
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="mailto:blabla@blabla"
              >
                blabla@blabla
              </a>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class="fd-avatar-group__item"
        onclick="onPopoverClick('popover_avatar_qc1f1jf');"
        tabindex="0"
      >
        
               
        <span
          aria-label="Endy Wallace"
          class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
        >
          EW
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="true"
      class="fd-popover__body"
      id="popover_avatar_qc1f1jf"
    >
      
            
      <div
        class="fd-quick-view"
      >
        
                
        <div
          class="fd-bar fd-bar--header"
        >
          
                    
          <div
            class="fd-bar__middle"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              Business Card
            </div>
            
                    
          </div>
          
                
        </div>
        
            
                
        <div
          class="fd-quick-view__content"
        >
          
                    
          <div
            class="fd-bar fd-bar--header-with-subheader"
          >
            
                        
            <div
              class="fd-bar__left"
            >
              
                            
              <span
                aria-label="Endy Wallace"
                class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
              >
                EW
              </span>
              
                            
              <div
                class="fd-quick-view__subheader-text"
              >
                
                                
                <h5
                  class="fd-title fd-title--h5"
                >
                  Endy Wallace
                </h5>
                
                                
                <div
                  class="fd-quick-view__subtitle"
                >
                  Software Developer
                </div>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                    
          <div
            class="fd-form-group"
            role="group"
          >
            
                        
            <div
              aria-labelledby="contactDetails_qc1f1jf"
              class="fd-form-group__header"
            >
              
                            
              <h1
                class="fd-form-group__header-text"
                id="contactDetails_qc1f1jf"
              >
                Contact Details
              </h1>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Mobile
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+89181818181"
              >
                +89181818181
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Phone
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="tel:+2828282828"
              >
                +2828282828
              </a>
              
                        
            </div>
            
                        
            <div
              class="fd-form-item"
            >
              
                            
              <label
                class="fd-form-label"
              >
                Email
              </label>
              
                            
              <a
                class="fd-link fd-input"
                href="mailto:blabla@blabla"
              >
                blabla@blabla
              </a>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

    
  <div
    class="fd-popover fd-popover--right"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Has popup type dialog"
        class="fd-button fd-avatar-group__more-button fd-avatar-group__more-button--s"
        onclick="onPopoverClick('popover_avatar_more_aoiwjth');"
        role="button"
      >
        
               
        <span
          class="fd-button__text"
        >
          <bdi>
            +4
          </bdi>
        </span>
        
            
      </button>
      
        
    </div>
    
        
        
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--right"
      id="popover_avatar_more_aoiwjth"
    >
      
            
      <div
        class="fd-popover__wrapper"
        style="max-height: 200px; min-width: 250px; overflow-x: hidden;"
      >
        
                
        <div
          class="fd-popover__body-header"
        >
          
                    
          <div
            class="fd-bar fd-bar--header"
          >
            
                        
            <div
              class="fd-bar__middle"
            >
              
                            
              <div
                class="fd-bar__element"
              >
                Team Members (4)
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
          
            
                
        <div
          class="fd-container"
        >
          
                    
          <div
            class="fd-row"
          >
            
                        
            <div
              class="fd-col fd-col--3"
            >
              
                            
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="fd-avatar-group__item"
                tabindex="0"
              >
                
                                
                <span
                  aria-label="Avatar"
                  class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
                >
                  
                                    
                  <i
                    class="fd-avatar__icon sap-icon--washing-machine"
                    role="presentation"
                  />
                  
                                
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-col fd-col--3"
            >
              
                            
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="fd-avatar-group__item"
                tabindex="0"
              >
                
                                
                <span
                  aria-label="John Doe"
                  class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border fd-avatar--thumbnail"
                  role="presentation"
                  style="background-image: url('/assets/images/avatars/2.svg')"
                />
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-col fd-col--3"
            >
              
                            
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="fd-avatar-group__item"
                tabindex="0"
              >
                
                                
                <span
                  aria-label="John Moe"
                  class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
                >
                  JM
                </span>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-col fd-col--3"
            >
              
                            
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="fd-avatar-group__item"
                tabindex="0"
              >
                
                                
                <span
                  aria-label="Joe Bloggs"
                  class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--border"
                >
                  JB
                </span>
                
                            
              </div>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
